website/style.css
/* ... */
/* -------------------------- */
/* --------- FLIPER --------- */
.fliper{
    display: flex;
    text-align: center;
    align-items: center;
    flex-direction: column;   
    left: 0%;
    padding: 2rem;
    position: relative;
    width: 300px;
    height: 400px;
    background-color: rgb(33, 33, 33, 0.7);
}
.fliper p{    
    align-items: center;
    top: 5%;
    position: relative;   
    color:white;
}
/* ------------------------------ */
/* --------- MENTALISTA --------- */
.mentalista{
    display: flex;
    text-align: center;
    align-items: center;
    flex-direction: column;   
    left: 0%;
    padding: 2rem;
    position: relative;
    width: 300px;
    height: 400px;
    background-color: rgb(33, 33, 33, 0.7);
}
.mentalista p{    
    align-items: center;
    top: 5%;
    position: relative;   
    color:white;
}
/* ----------------------------- */
/* --------- CONVERSOR --------- */
.conversor{
    display: flex;
    text-align: center;
    align-items: center;
    flex-direction: column;   
    left: 0%;
    padding: 2rem;
    position: relative;
    width: 300px;
    height: 400px;
    background-color: rgb(33, 33, 33, 0.7);
}
.conversor p{    
    align-items: center;
    top: 5%;
    position: relative;   
    color:white;
}
/*
--------------------
     CIDA BOT
--------------------
*/
.other-projects{
    position: relative; 
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    top: 15%;
}
.other-projects-tittle{   
    position: relative;    
    color: white;
    display: flex;
    justify-content: center;
    flex-direction: column; 
    align-items: center;
}

.other-projects h1{    
    font-size: 113%;
    color: white;     
}

.other-projects-tittle h1{
    font-size: 35px;   
    position: relative;
    display: flex;
}

.other-projects-tittle h3{
    font-size: 15px;   
    position: relative;
    display: flex;
}

.cida-pic{
    position: relative;
    display: flex;
    border-radius: 50%;
    width: 15%;   
    flex-direction: column;
    margin-bottom: 1em;    
}

.cida{
    margin-top: 6%;
    position: relative;
    display: flex;
    text-align: center;
    align-items: center;
    flex-direction: column;   
    padding: 2rem;
    width: 800px;
    height: 400px;
    background-color: rgb(33, 33, 33, 0.7);
}
.cida p{    
    align-items: center;
    top: 5%;
    position: relative;   
    color:white;
}

.cida-buttons{    
    bottom: 10%;
    display: flex;    
    position: absolute;    
}

.cida-buttons button{
    border: 0;
    color: #ffffff;
    background: rgba(193, 146, 76, 1);
    font-weight: bold;
    padding: 10px 30px;
    font-size: 15px;
    border-radius: 4px;
    margin: 0em 1em 0em 1em;
    cursor: pointer;   
}

.cida-buttons button:hover{
    background: rgb(158, 120, 62);
}

.cida-buttons button a{
    border: 0;   
    text-decoration: none;
    color: white;
}



/* ----------------------- */


/* ------- CONTACT ------- */
.container-contact{    
    display: flex;  
    align-items: center;    
    flex-direction: column;
    background-image: url("images/Landscape_.jpg");
    background-position: center;
    height: 120vh;
}

.contact-window{
    font-family: 'Poppins', sans-serif;
    position: relative;
    display: flex;
    top: 20%;
    display: flex;
    text-align: center;
    align-items: center; 
    justify-content: center;
    flex-direction: column;   
    width: 50%;
    height: 50%;
    background-color: rgba(92, 92, 92, 0.0);
}
.contact-window h2{
    font-size: 150%;       
     color: white;       
 }
.contact-window h1{
   font-size: 200%;       
    color: white;       
}

/*RESPONSIVE OPTIONS*/
@media screen and (max-width:1024px){
    .nav-title h1{
        margin-left: 20%;
    }
    .nav-links{
        width: 50%;        
    }
    body{
        overflow-x: hidden;
        }
}

@media screen and (max-width:580px){
    body{
    overflow-x: hidden;
    }

    nav{
    display: flex;
    align-items: center;
    justify-content: center;
}

    .nav-links{
        position: absolute;
        flex-direction: column;   
        display: flex;
        right: 0px;
        height: 92vh;
        top: 10.7vh;        
        background-color: rgb(65, 65, 65);
        align-items: center;
        width: 60%;
        transform: translateX(100%);  
        transition: transform 0.5s ease-in;   
    }
    .nav-links li{
        opacity: 0%;
    }
    .burger{    
        margin-left: 0%;
        display:block;       
    }
}
/* reveal the nav bar at the right side*/
.nav-active{
    transform: translateX(0%);
}

@keyframes navLinkFade {
    from{
     opacity: 0;
     transform: translateX(50px);
    }
    to{
     opacity: 1;
     
     transform: translateX(0px);
    }
}

.toggle .line1{
 transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2{
    opacity: 0;
}
.toggle .line3{
    transform: rotate(45deg) translate(-5px, -6px);
}

